# habit-of-fate-haskell

./: .gitignore  habit-of-fate.cabal  stack.yaml  test.sh
admin/: cert.sh  run.sh  setup.sh
certs/: device.crt  device.key
data/app/css/: common.css  common_desktop.css  common_mobile.css  deadlines.css  deeds.css  edit.css  edit_common.css  edit_desktop.css  edit_group.css  edit_mobile.css  enter_desktop.css  list.css  list_common.css  list_desktop.css  list_mobile.css  normalize.css  story.css
data/app/images/: button-bad-off.svgz  button-bad-on.svgz  button-good-off.svgz  button-good-on.svgz  button-skip-off.svgz  button-skip-on.svgz  deeds.svgz  edit.svgz  logo-1.svgz  logo-2.svgz  logo.svgz  treasure-chest.svgz
data/app/js/: edit.js
data/static/css/: style.css
data/static/images/: logo.svgz
habit-of-fate/: LICENSE  habit-of-fate.cabal
habit-of-fate-client/: habit-of-fate-client.cabal
habit-of-fate-client/sources/executables/: habit-client.hs
habit-of-fate-server/: habit-of-fate-server.cabal
habit-of-fate-web/: bower.json  build-test.sh  build.sh  elm-package.json
habit-of-fate-web/sources/: Api.elm  Habit.elm  Main.elm  Test.elm
habit-of-fate-web/sources/Page/: Account.elm  Edit.elm  Habit.elm  Habits.elm
habit-of-fate-web/sources/Page/Account/: Create.elm  Login.elm
habit-of-fate-web/src/: Client.purs  Main.purs  UUID.purs  Unicode.purs
habit-of-fate-web/test/: Main.purs
habit-of-fate/data/: testing_certificate.pem  testing_key.pem
habit-of-fate/sources/tests/: README  test-story-roundtrip.hs  test-webdriver.hs  test-webdriver.py  test.hs
misc/: Template.hs  _polish.sh  center-banner.hs  center-section.hs  run-all-tests.sh  search.sh  test-all-the-things.sh  test-server.sh  upload.sh
scripts/: connect.sh  generate-localhost-certificates.sh  localhost.conf  upload.sh
sources/executables/: act.hs  center-banner.hs  create-database.hs  create-god.hs  generate-html.hs  generate-latex.hs  generate-names.hs  generate-random-stories.hs  good.hs  habit-client.hs  habit-server.hs  habit-test-client.hs  habit-test-server.hs  habit.hs  new.hs  proofread.hs  test.hs
sources/tests/: test-json.hs  test-repeated.hs  test-server.hs  test-stories.hs  test-story-roundtrip.hs  test-stress-run-game.hs  test-substitution.hs  test.hs
web/css/: common.css  deadlines.css  edit.css  enter.css  list.css  story.css  tz.css
web/images/: bad.svgz  good.svgz  grave.svgz  logo.svgz
web/js/: edit.js
web/stories/forest/: failure.txt  found.txt  intro.txt  wander.txt  won.txt
