name:                habit-of-fate
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
cabal-version:       >=1.10
data-files:          web/css/common.css
                     web/css/edit.css
                     web/css/enter.css
                     web/css/list.css
                     web/css/normalize.css
                     web/css/story.css
                     web/fonts/GloriaHallelujah.woff2
                     web/images/bad.svgz
                     web/images/grave.svgz
                     web/images/good.svgz
                     web/images/logo.svgz
                     web/images/treasure-chest.svgz

library
  hs-source-dirs:      sources/library
  build-depends:       base
                     , aeson
                     , blaze-builder
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , connection
                     , containers
                     , cookie
                     , data-default
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , flow
                     , interpolate
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , lens
                     , MonadRandom
                     , mono-traversable
                     , monad-control
                     , mtl
                     , operational
                     , optparse-applicative
                     , parsec
                     , pwstore-fast
                     , rainbow
                     , random
                     , scotty
                     , stm
                     , text
                     , th-lift
                     , th-lift-instances
                     , time
                     , template-haskell
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , xml-conduit
                     , yaml
  exposed-modules:     HabitOfFate.API
                     , HabitOfFate.Client
                     , HabitOfFate.Data.Account
                     , HabitOfFate.Data.Credits
                     , HabitOfFate.Data.Habit
                     , HabitOfFate.Logging
                     , HabitOfFate.Prelude
                     , HabitOfFate.Proofread
                     , HabitOfFate.Quest
                     , HabitOfFate.Quests
                     , HabitOfFate.Quests.Forest
                     , HabitOfFate.Server
                     , HabitOfFate.Server.Actions.Queries
                     , HabitOfFate.Server.Actions.Results
                     , HabitOfFate.Server.Common
                     , HabitOfFate.Server.Transaction.Common
                     , HabitOfFate.Server.Transaction.Reader
                     , HabitOfFate.Server.Transaction.Writer
                     , HabitOfFate.Server.Requests.Api.DeleteHabit
                     , HabitOfFate.Server.Requests.Api.GetAllHabits
                     , HabitOfFate.Server.Requests.Api.GetCredits
                     , HabitOfFate.Server.Requests.Api.GetHabit
                     , HabitOfFate.Server.Requests.Api.GetQuestStatus
                     , HabitOfFate.Server.Requests.Api.PutHabit
                     , HabitOfFate.Server.Requests.Web.EditAndDeleteHabit
                     , HabitOfFate.Server.Requests.Web.GetAllHabits
                     , HabitOfFate.Server.Requests.Web.GetFile
                     , HabitOfFate.Server.Requests.Web.GetQuestStatus
                     , HabitOfFate.Server.Requests.Web.MoveHabit
                     , HabitOfFate.Server.Requests.Web.NewHabit
                     , HabitOfFate.Server.Requests.LoginOrCreate
                     , HabitOfFate.Server.Requests.Logout
                     , HabitOfFate.Server.Requests.MarkHabitAndRun
                     , HabitOfFate.Story
                     , HabitOfFate.Story.Parser.Quote
                     , HabitOfFate.Story.Parser.XML
                     , HabitOfFate.Story.Renderer.Console
                     , HabitOfFate.Story.Renderer.HTML
                     , HabitOfFate.Story.Renderer.XML
                     , HabitOfFate.Substitution
                     , HabitOfFate.Tag
                     , HabitOfFate.Trial
                     , HabitOfFate.TH
  other-modules:       Paths_habit_of_fate
  default-language:    Haskell2010

executable habit-client
  hs-source-dirs:      sources/executables
  main-is:             habit-client.hs
  build-depends:       habit-of-fate
                     , base
                     , optparse-applicative
  default-language:    Haskell2010

executable habit-test-client
  hs-source-dirs:      sources/executables
  main-is:             habit-test-client.hs
  build-depends:       habit-of-fate, base
  default-language:    Haskell2010

executable habit-server
  hs-source-dirs:      sources/executables
  main-is:             habit-server.hs
  build-depends:       habit-of-fate
                     , base
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , jwt
                     , optparse-applicative
                     , random
                     , scotty
                     , stm
                     , text
                     , uuid
                     , warp
                     , warp-tls
                     , yaml
  default-language:    Haskell2010

executable habit-test-server
  hs-source-dirs:      sources/executables
  main-is:             habit-test-server.hs
  build-depends:       habit-of-fate
                     , base
                     , stm
                     , warp
                     , warp-tls
  default-language:    Haskell2010

executable proofread
  hs-source-dirs:      sources/executables
  main-is:             proofread.hs
  build-depends:       habit-of-fate
                     , base
                     , blaze-html
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test.hs
  build-depends:       habit-of-fate
                     , base
                     , bytestring
                     , containers
                     , exceptions
                     , html-conduit
                     , http-client
                     , http-conduit
                     , http-types
                     , jwt
                     , lens
                     , parsec
                     , QuickCheck
                     , quickcheck-text
                     , scotty
                     , stm
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , temporary
                     , text
                     , time
                     , uuid
                     , warp
                     , xml-conduit
                     , xml-lens
  default-language:    Haskell2010

test-suite test-story-roundtrip
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-story-roundtrip.hs
  build-depends:       habit-of-fate
                     , base
                     , filepath
                     , lens
                     , QuickCheck
                     , random
                     , smallcheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-smallcheck
  default-language:    Haskell2010
