name:                habit-of-fate
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
cabal-version:       >=1.10
data-files:          data/app/css/common.css
                     data/app/css/deadlines.css
                     data/app/css/edit.css
                     data/app/css/enter.css
                     data/app/css/list.css
                     data/app/css/normalize.css
                     data/app/css/story.css
                     data/app/fonts/GloriaHallelujah.woff2
                     data/app/images/bad.svgz
                     data/app/images/button-bad-off.svgz
                     data/app/images/button-bad-on.svgz
                     data/app/images/button-good-off.svgz
                     data/app/images/button-good-on.svgz
                     data/app/images/button-skip-off.svgz
                     data/app/images/button-skip-on.svgz
                     data/app/images/edit.svgz
                     data/app/images/grave.svgz
                     data/app/images/good.svgz
                     data/app/images/logo.svgz
                     data/app/images/treasure-chest.svgz
                     data/app/js/edit.js
                     data/static/css/style.css
                     data/static/images/logo.svgz

library
  hs-source-dirs:      sources/library
  ghc-options:         -Werror=incomplete-patterns
                       -Werror=missing-fields
  build-depends:       base
                     , aeson
                     , blaze-builder
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , connection
                     , containers
                     , cookie
                     , data-default
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , flow
                     , interpolate
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , lens
                     , MonadRandom
                     , mono-traversable
                     , monad-control
                     , mtl
                     , operational
                     , optparse-applicative
                     , parsec
                     , pwstore-fast
                     , rainbow
                     , random
                     , scotty
                     , split
                     , stm
                     , text
                     , th-lift
                     , th-lift-instances
                     , time
                     , template-haskell
                     , transformers
                     , transformers-base
                     , tz
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , xml-conduit
                     , yaml
  exposed-modules:     HabitOfFate.API
                     , HabitOfFate.Data.Account
                     , HabitOfFate.Data.Configuration
                     , HabitOfFate.Data.Group
                     , HabitOfFate.Data.Habit
                     , HabitOfFate.Data.InputHabit
                     , HabitOfFate.Data.ItemsSequence
                     , HabitOfFate.Data.Repeated
                     , HabitOfFate.Data.Scale
                     , HabitOfFate.Data.SuccessOrFailureResult
                     , HabitOfFate.Data.Tagged
                     , HabitOfFate.JSON
                     , HabitOfFate.Logging
                     , HabitOfFate.Pages
                     , HabitOfFate.Prelude
                     , HabitOfFate.Proofread
                     , HabitOfFate.Quest
                     , HabitOfFate.Quests
                     , HabitOfFate.Quests.Forest
                     , HabitOfFate.Server
                     , HabitOfFate.Server.Actions.Queries
                     , HabitOfFate.Server.Actions.Results
                     , HabitOfFate.Server.Common
                     , HabitOfFate.Server.Transaction
                     , HabitOfFate.Server.Requests.Api.Deadlines
                     , HabitOfFate.Server.Requests.Api.DeleteConfiguration
                     , HabitOfFate.Server.Requests.Api.DeleteGroup
                     , HabitOfFate.Server.Requests.Api.DeleteHabit
                     , HabitOfFate.Server.Requests.Api.GetAllGroups
                     , HabitOfFate.Server.Requests.Api.GetAllHabits
                     , HabitOfFate.Server.Requests.Api.GetConfiguration
                     , HabitOfFate.Server.Requests.Api.GetGroup
                     , HabitOfFate.Server.Requests.Api.GetHabit
                     , HabitOfFate.Server.Requests.Api.GetMarks
                     , HabitOfFate.Server.Requests.Api.GetQuestStatus
                     , HabitOfFate.Server.Requests.Api.PutConfiguration
                     , HabitOfFate.Server.Requests.Api.PutGroup
                     , HabitOfFate.Server.Requests.Api.PutHabit
                     , HabitOfFate.Server.Requests.Shared.Deadlines
                     , HabitOfFate.Server.Requests.Shared.GetQuestStatus
                     , HabitOfFate.Server.Requests.Shared.LoginOrCreate
                     , HabitOfFate.Server.Requests.Shared.Logout
                     , HabitOfFate.Server.Requests.Shared.MarkHabit
                     , HabitOfFate.Server.Requests.Shared.Run
                     , HabitOfFate.Server.Requests.Web.ChangeTimeZone
                     , HabitOfFate.Server.Requests.Web.Deadlines
                     , HabitOfFate.Server.Requests.Web.EditAndDeleteGroup
                     , HabitOfFate.Server.Requests.Web.EditAndDeleteHabit
                     , HabitOfFate.Server.Requests.Web.GetAllHabits
                     , HabitOfFate.Server.Requests.Web.GetFile
                     , HabitOfFate.Server.Requests.Web.GetQuestStatus
                     , HabitOfFate.Server.Requests.Web.MoveGroup
                     , HabitOfFate.Server.Requests.Web.MoveHabit
                     , HabitOfFate.Server.Requests.Web.NewGroup
                     , HabitOfFate.Server.Requests.Web.NewHabit
                     , HabitOfFate.Story
                     , HabitOfFate.Substitution
                     , HabitOfFate.Trial
                     , HabitOfFate.TH
  other-modules:       Paths_habit_of_fate
  default-language:    Haskell2010

executable habit-server
  hs-source-dirs:      sources/executables
  main-is:             habit-server.hs
  build-depends:       habit-of-fate
                     , base
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , jwt
                     , optparse-applicative
                     , random
                     , scotty
                     , stm
                     , text
                     , uuid
                     , warp
                     , warp-tls
                     , yaml
  default-language:    Haskell2010

executable habit-test-server
  hs-source-dirs:      sources/executables
  main-is:             habit-test-server.hs
  build-depends:       habit-of-fate
                     , base
                     , stm
                     , warp
                     , warp-tls
  default-language:    Haskell2010

executable generate-html
  hs-source-dirs:      sources/executables
  main-is:             generate-html.hs
  build-depends:       habit-of-fate
                     , base
                     , blaze-html
                     , directory
                     , filepath
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test.hs
  build-depends:       habit-of-fate
                     , base
                     , aeson
                     , bytestring
                     , call-stack
                     , containers
                     , exceptions
                     , html-conduit
                     , http-client
                     , http-conduit
                     , http-types
                     , jwt
                     , lens
                     , parsec
                     , QuickCheck
                     , quickcheck-text
                     , scalpel
                     , scotty
                     , stm
                     , tagsoup
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , temporary
                     , text
                     , time
                     , tz
                     , uuid
                     , vector
                     , warp
                     , xml-conduit
  default-language:    Haskell2010
