name:                habit-of-fate
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
cabal-version:       >=1.10
data-files:          data/app/css/common.css
                     data/app/css/common_desktop.css
                     data/app/css/common_mobile.css
                     data/app/css/deadlines.css
                     data/app/css/deeds.css
                     data/app/css/edit_common.css
                     data/app/css/edit_desktop.css
                     data/app/css/edit_mobile.css
                     data/app/css/enter_common.css
                     data/app/css/enter_desktop.css
                     data/app/css/list_common.css
                     data/app/css/list_desktop.css
                     data/app/css/list_mobile.css
                     data/app/css/normalize.css
                     data/app/css/story.css
                     data/app/fonts/Gaegu.ttf
                     data/app/images/bad.svgz
                     data/app/images/button-bad-off.svgz
                     data/app/images/button-bad-on.svgz
                     data/app/images/button-good-off.svgz
                     data/app/images/button-good-on.svgz
                     data/app/images/button-skip-off.svgz
                     data/app/images/button-skip-on.svgz
                     data/app/images/edit.svgz
                     data/app/images/grave.svgz
                     data/app/images/good.svgz
                     data/app/images/logo.svgz
                     data/app/images/treasure-chest.svgz
                     data/app/js/edit.js
                     data/static/css/style.css
                     data/static/images/grave.svg
                     data/static/images/logo.svg
                     data/static/images/treasure-chest.svg
                     data/static/fonts/Gaegu.ttf

library
  hs-source-dirs:      sources/library
  ghc-options:         -Werror=incomplete-patterns
                       -Werror=missing-fields
                       -Werror=missing-methods
  build-depends:       base
                     , aeson
                     , blaze-builder
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , call-stack
                     , cmark
                     , connection
                     , containers
                     , cookie
                     , data-default
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , flow
                     , interpolate
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , lens
                     , logict
                     , markov-chain
                     , MonadRandom
                     , mono-traversable
                     , monad-control
                     , mtl
                     , optparse-applicative
                     , parsec
                     , pwstore-fast
                     , QuickCheck
                     , rainbow
                     , random
                     , random-shuffle
                     , scotty
                     , smallcheck
                     , split
                     , stm
                     , tasty
                     , tasty-hunit
                     , text
                     , th-lift
                     , th-lift-instances
                     , time
                     , template-haskell
                     , transformers
                     , transformers-base
                     , tz
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , xml-conduit
                     , yaml
  exposed-modules:     HabitOfFate.API
                     , HabitOfFate.Data.Account
                     , HabitOfFate.Data.Configuration
                     , HabitOfFate.Data.Deed
                     , HabitOfFate.Data.Gender
                     , HabitOfFate.Data.Group
                     , HabitOfFate.Data.Habit
                     , HabitOfFate.Data.InputHabit
                     , HabitOfFate.Data.ItemsSequence
                     , HabitOfFate.Data.Mark
                     , HabitOfFate.Data.Markdown
                     , HabitOfFate.Data.Outcomes
                     , HabitOfFate.Data.QuestState
                     , HabitOfFate.Data.Repeated
                     , HabitOfFate.Data.Scale
                     , HabitOfFate.Data.SuccessOrFailureResult
                     , HabitOfFate.Data.Tagged
                     , HabitOfFate.JSON
                     , HabitOfFate.Logging
                     , HabitOfFate.Names
                     , HabitOfFate.Prelude
                     , HabitOfFate.Quest
                     , HabitOfFate.Quest.Pages
                     , HabitOfFate.Quest.Pages.Index
                     , HabitOfFate.Quests
                     , HabitOfFate.Quests.Forest
                     , HabitOfFate.Server
                     , HabitOfFate.Server.Actions.Queries
                     , HabitOfFate.Server.Actions.Results
                     , HabitOfFate.Server.Common
                     , HabitOfFate.Server.Transaction
                     , HabitOfFate.Server.Requests.Api.Deadlines
                     , HabitOfFate.Server.Requests.Api.DeleteConfiguration
                     , HabitOfFate.Server.Requests.Api.DeleteGroup
                     , HabitOfFate.Server.Requests.Api.DeleteHabit
                     , HabitOfFate.Server.Requests.Api.GetAllGroups
                     , HabitOfFate.Server.Requests.Api.GetAllHabits
                     , HabitOfFate.Server.Requests.Api.GetConfiguration
                     , HabitOfFate.Server.Requests.Api.GetGroup
                     , HabitOfFate.Server.Requests.Api.GetHabit
                     , HabitOfFate.Server.Requests.Api.GetMarks
                     , HabitOfFate.Server.Requests.Api.GetQuestStatus
                     , HabitOfFate.Server.Requests.Api.PutConfiguration
                     , HabitOfFate.Server.Requests.Api.PutGroup
                     , HabitOfFate.Server.Requests.Api.PutHabit
                     , HabitOfFate.Server.Requests.Api.RunGame
                     , HabitOfFate.Server.Requests.Shared.Deadlines
                     , HabitOfFate.Server.Requests.Shared.GetQuestStatus
                     , HabitOfFate.Server.Requests.Shared.LoginOrCreate
                     , HabitOfFate.Server.Requests.Shared.Logout
                     , HabitOfFate.Server.Requests.Shared.MarkHabit
                     , HabitOfFate.Server.Requests.Shared.RunGame
                     , HabitOfFate.Server.Requests.Web.ChangeTimeZone
                     , HabitOfFate.Server.Requests.Web.Deadlines
                     , HabitOfFate.Server.Requests.Web.Deeds
                     , HabitOfFate.Server.Requests.Web.EditAndDeleteGroup
                     , HabitOfFate.Server.Requests.Web.EditAndDeleteHabit
                     , HabitOfFate.Server.Requests.Web.GetAllHabits
                     , HabitOfFate.Server.Requests.Web.GetFile
                     , HabitOfFate.Server.Requests.Web.GetQuestStatus
                     , HabitOfFate.Server.Requests.Web.MoveGroup
                     , HabitOfFate.Server.Requests.Web.MoveHabit
                     , HabitOfFate.Server.Requests.Web.NewGroup
                     , HabitOfFate.Server.Requests.Web.NewHabit
                     , HabitOfFate.Server.Requests.Web.RunGame
                     , HabitOfFate.Story
                     , HabitOfFate.Substitution
                     , HabitOfFate.Testing
                     , HabitOfFate.Testing.Assertions
                     , HabitOfFate.Testing.Data
                     , HabitOfFate.Testing.DayHour
                     , HabitOfFate.Testing.Instances
                     , HabitOfFate.Testing.Server
                     , HabitOfFate.Trial
                     , HabitOfFate.TH
  other-modules:       Paths_habit_of_fate
  default-language:    Haskell2010

executable habit-server
  hs-source-dirs:      sources/executables
  main-is:             habit-server.hs
  build-depends:       habit-of-fate
                     , base
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , jwt
                     , optparse-applicative
                     , random
                     , scotty
                     , stm
                     , text
                     , uuid
                     , warp
                     , warp-tls
                     , yaml
  default-language:    Haskell2010

executable generate-html
  hs-source-dirs:      sources/executables
  main-is:             generate-html.hs
  build-depends:       habit-of-fate
                     , base
                     , blaze-html
                     , directory
                     , filepath
                     , lens
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

executable generate-latex
  hs-source-dirs:      sources/executables
  main-is:             generate-latex.hs
  build-depends:       habit-of-fate
                     , base
                     , directory
                     , filepath
                     , optparse-applicative
                     , raw-strings-qq
                     , text
  default-language:    Haskell2010

executable generate-random-stories
  hs-source-dirs:      sources/executables
  main-is:             generate-random-stories.hs
  build-depends:       habit-of-fate
                     , base
                     , blaze-html
                     , directory
                     , filepath
                     , lens
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite test-json
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-json.hs
  build-depends:       habit-of-fate
                     , base
                     , aeson
                     , call-stack
                     , QuickCheck
                     , smallcheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-smallcheck
  default-language:    Haskell2010

test-suite test-repeated
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-repeated.hs
  build-depends:       habit-of-fate
                     , base
                     , call-stack
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , time
                     , vector
  default-language:    Haskell2010

test-suite test-server
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-server.hs
  build-depends:       habit-of-fate
                     , base
                     , bytestring
                     , call-stack
                     , exceptions
                     , http-client
                     , http-conduit
                     , http-types
                     , scalpel
                     , scotty
                     , stm
                     , tagsoup
                     , tasty
                     , text
                     , time
                     , tz
                     , uuid
                     , warp
  default-language:    Haskell2010

test-suite test-stories
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-stories.hs
  build-depends:       habit-of-fate
                     , base
                     , call-stack
                     , text
  default-language:    Haskell2010

test-suite test-stress-run-game
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-stress-run-game.hs
  build-depends:       habit-of-fate
                     , base
                     , random
                     , tasty
                     , text
                     , uuid
                     , warp
  default-language:    Haskell2010

test-suite test-substitution
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-substitution.hs
  build-depends:       habit-of-fate
                     , base
                     , call-stack
  default-language:    Haskell2010
