name:                habit-of-fate-client
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable habit-client
  hs-source-dirs:      sources/executables
  main-is:             habit-client.hs
  build-depends:       base, habit-of-fate
  default-language:    Haskell2010
