name:                habit-of-fate
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      sources/library
  build-depends:       base
                     , aeson
                     , bytestring
                     , connection
                     , containers
                     , data-default
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , jwt
                     , hslogger
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , labels
                     , lens
                     , MonadRandom
                     , mono-traversable
                     , mtl
                     , operational
                     , parsec
                     , rainbow
                     , random
                     , scotty
                     , stm
                     , text
                     , th-lift
                     , th-lift-instances
                     , time
                     , template-haskell
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , warp-tls
                     , xml-conduit
                     , yaml
  exposed-modules:     HabitOfFate.Account
                     , HabitOfFate.Client
                     , HabitOfFate.Credits
                     , HabitOfFate.Game
                     , HabitOfFate.Habit
                     , HabitOfFate.JSON
                     , HabitOfFate.Prelude
                     , HabitOfFate.Quest
                     , HabitOfFate.Quests
                     , HabitOfFate.Quests.Forest
                     , HabitOfFate.Server
                     , HabitOfFate.Story
                     , HabitOfFate.Trial
                     , HabitOfFate.TH
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test.hs
  build-depends:       habit-of-fate
                     , base
                     , containers
                     , directory
                     , filepath
                     , hslogger
                     , lens
                     , mtl
                     , QuickCheck
                     , random
                     , smallcheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , uuid
                     , warp
  default-language:    Haskell2010
