name:                habit-of-fate
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
data-files:          data/testing_certificate.pem
                   , data/testing_key.pem
cabal-version:       >=1.10

library
  hs-source-dirs:      sources/library
  build-depends:       base
                     , aeson
                     , bytestring
                     , connection
                     , containers
                     , data-default
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , jwt
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , labels
                     , lens
                     , MonadRandom
                     , mono-traversable
                     , monad-control
                     , mtl
                     , operational
                     , optparse-applicative
                     , parsec
                     , pwstore-fast
                     , rainbow
                     , random
                     , scotty
                     , stm
                     , text
                     , th-lift
                     , th-lift-instances
                     , time
                     , template-haskell
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , warp-tls
                     , xml-conduit
                     , yaml
  exposed-modules:     HabitOfFate.Account
                     , HabitOfFate.App.Client
                     , HabitOfFate.App.Server
                     , HabitOfFate.Client
                     , HabitOfFate.Credits
                     , HabitOfFate.Game
                     , HabitOfFate.Habit
                     , HabitOfFate.JSON
                     , HabitOfFate.Logging
                     , HabitOfFate.Prelude
                     , HabitOfFate.Quest
                     , HabitOfFate.Quests
                     , HabitOfFate.Quests.Forest
                     , HabitOfFate.Server
                     , HabitOfFate.Story
                     , HabitOfFate.Trial
                     , HabitOfFate.TH
  other-modules:       Paths_habit_of_fate
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test.hs
  build-depends:       habit-of-fate
                     , base
                     , containers
                     , directory
                     , filepath
                     , hslogger
                     , http-client
                     , http-types
                     , jwt
                     , lens
                     , mtl
                     , random
                     , tasty
                     , tasty-hunit
                     , uuid
                     , warp
  default-language:    Haskell2010

test-suite test-story-roundtrip
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-story-roundtrip.hs
  build-depends:       habit-of-fate
                     , base
                     , directory
                     , filepath
                     , hslogger
                     , lens
                     , QuickCheck
                     , random
                     , smallcheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-smallcheck
  default-language:    Haskell2010
