name:                habit-of-fate
version:             0.1.0.0
synopsis:            A game to strengthen habits
license:             BSD3
license-file:        LICENSE
author:              Gregory Crosswhite
maintainer:          gcrosswhite@gmail.com
copyright:           2016 Gregory Crosswhite
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      sources/library
  build-depends:       base
                     , aeson
                     , blaze-html
                     , bytestring
                     , connection
                     , containers
                     , data-default
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , flow
                     , interpolate
                     , jwt
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , labels
                     , lens
                     , MonadRandom
                     , mono-traversable
                     , monad-control
                     , mtl
                     , operational
                     , optparse-applicative
                     , parsec
                     , pwstore-fast
                     , rainbow
                     , random
                     , scotty
                     , stm
                     , text
                     , th-lift
                     , th-lift-instances
                     , time
                     , template-haskell
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , warp-tls
                     , xml-conduit
                     , yaml
  exposed-modules:     HabitOfFate.Account
                     , HabitOfFate.App.Client
                     , HabitOfFate.App.Server
                     , HabitOfFate.Client
                     , HabitOfFate.Credits
                     , HabitOfFate.Game
                     , HabitOfFate.Habit
                     , HabitOfFate.JSON
                     , HabitOfFate.Logging
                     , HabitOfFate.Prelude
                     , HabitOfFate.Quest
                     , HabitOfFate.Quests
                     , HabitOfFate.Quests.Forest
                     , HabitOfFate.Server
                     , HabitOfFate.Story
                     , HabitOfFate.Trial
                     , HabitOfFate.TH
  other-modules:       Paths_habit_of_fate
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test.hs
  build-depends:       habit-of-fate
                     , base
                     , containers
                     , http-client
                     , http-types
                     , jwt
                     , tasty
                     , tasty-hunit
                     , temporary
                     , warp
                     , xml-conduit
  default-language:    Haskell2010

test-suite test-story-roundtrip
  type:                exitcode-stdio-1.0
  hs-source-dirs:      sources/tests
  main-is:             test-story-roundtrip.hs
  build-depends:       habit-of-fate
                     , base
                     , filepath
                     , lens
                     , QuickCheck
                     , random
                     , smallcheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-smallcheck
  default-language:    Haskell2010
